cmake_minimum_required(VERSION 2.8)
project(DBMS)
include_directories(include)
set(CMAKE_CXX_FLAGS "-g")
#set(CMAKE_CXX_FLAGS "-g -Ofast")
include(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
if(COMPILER_SUPPORTS_CXX11)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
elseif(COMPILER_SUPPORTS_CXX0X)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
else()
        message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
endif()
aux_source_directory(parser DIR_PARSER_SRCS)
add_executable(DBMS test.cpp rc.h rm_manager.h rm_filehandle.h rm_record.h type.h bptree.h ix_manager.h ${DIR_PARSER_SRCS})

